// Copyright 2012 Google Inc
//
// The content of this file is licensed under the Creative Commons Attribution
// 3.0 License.
//
// Protocol definition OneBusAway-specific extensions to GTFS-realtime.

syntax = "proto2";

import "com/google/transit/realtime/gtfs-realtime.proto";

option java_package = "com.google.transit.realtime";
package transit_realtime;

message OneBusAwayFeedHeader {
  // For an incremental feed, the index of the current incremental FeedMessage.
  // Each incremental FeedMessage sent to a client should sequentially
  // increment the index, such that a client can detect missed messages by
  // looking for gaps in the index value.  It is not required that the index
  // of the first message sent to a client be zero.
  optional uint64 incremental_index = 1;
  
  // For an incremental feed, the maximum amount of time, in seconds, between
  // incremental updates.  Clients that have not received a FeedMessage, empty
  // or otherwise, in the specified time interval should assume that the
  // connection has been lost and reconnect.
  optional uint32 incremental_heartbeat_interval = 2;
}

extend FeedHeader {
  optional OneBusAwayFeedHeader oba_feed_header = 1000;
}

message OneBusAwayFeedEntity {
  // Optional description of the source of a particular feed entity.
  optional string source = 1;
}

extend FeedEntity {
  optional OneBusAwayFeedEntity oba_feed_entity = 1000;
}

message OneBusAwayTripUpdate {
  // Delay (in seconds) can be positive (meaning that the vehicle is late) or
  // negative (meaning that the vehicle is ahead of schedule). Delay of 0
  // means that the vehicle is exactly on time.
  //
  // Deprecated in favor of TripUpdate.delay
  optional int32 delay = 1 [deprecated = true];
  
  // Moment at which the trip update was computed. In POSIX time
  // (i.e., number of seconds since January 1st 1970 00:00:00 UTC).
  //
  // Deprecated in favor of TripUpdate.timestamp
  optional uint64 timestamp = 2 [deprecated = true];

  // trip headsign
  optional string tripHeadsign = 3;

  // trip direction
  optional string tripDirection = 4;

  // spooking aka zombie buses missing real-time but confirmed in revenue service
  optional bool is_estimated_realtime = 5 [default = false];
}

extend TripUpdate {
  optional OneBusAwayTripUpdate oba_trip_update = 1000;
}

message OneBusAwayStopTimeUpdate {
  optional string stopHeadsign = 1;
}

extend TripUpdate.StopTimeUpdate {
  optional OneBusAwayStopTimeUpdate oba_stop_time_update = 1000;
}

message OneBusAwayEntitySelector {
  optional string elevatorId = 1;
}

extend EntitySelector {
  optional OneBusAwayEntitySelector oba_entity_selector = 1000;
}

message OneBusAwayVehicleDescriptor {
  // list features of this vehicle, like kneeling, wifi, etc.
  repeated string vehicleFeature = 1;
}

extend VehicleDescriptor {
  optional OneBusAwayVehicleDescriptor oba_vehicle_descriptor = 1000;
}